--- a/.github/workflows/APITesting.yml
+++ b/.github/workflows/APITesting.yml
@@ -3,10 +3,10 @@ name: CICD Pipeline for API Testing
 on:
   push:
     branches:
-      - api
+      - main
   pull_request:
     branches:
-      - api
+      - main
 
 jobs:
   test:
