--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,8 @@
     "mysql2": "^3.10.0",
     "sequelize": "^6.37.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.13.0"
   },
   "repository": {
     "type": "git",
